feat: Implement print functionality and improve logo positioning
Adds CSS for print styling to enable PDF generation of quotes.
Refactors `LogoDraggable` to use percentage-based positioning for more robust layout.
Updates `App.tsx` to manage and display logo positions in percentages and integrates a preview for printable quotes.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,42 @@
       ::-webkit-scrollbar-track { background: #f1f5f9; }
       ::-webkit-scrollbar-thumb { background: #cbd5e1; border-radius: 4px; }
       ::-webkit-scrollbar-thumb:hover { background: #94a3b8; }
+
+      /* Print Styles for PDF Generation */
+      @media print {
+        @page {
+          size: A4;
+          margin: 0;
+        }
+        body {
+          background: white;
+          -webkit-print-color-adjust: exact !important;
+          print-color-adjust: exact !important;
+        }
+        /* Hide everything by default */
+        body > * {
+          display: none !important;
+        }
+        /* Only display the printable area */
+        #printable-area {
+          display: block !important;
+          position: absolute !important;
+          top: 0 !important;
+          left: 0 !important;
+          width: 100% !important;
+          height: 100% !important;
+          margin: 0 !important;
+          padding: 0 !important;
+          background: white !important;
+        }
+        /* Reset any transforms or shadows for print */
+        #printable-content {
+          transform: none !important;
+          box-shadow: none !important;
+          margin: 0 !important;
+          width: 100% !important;
+        }
+      }
     </style>
   <script type="importmap">
 {
